[gd_scene load_steps=38 format=3 uid="uid://cwc484fka4xrv"]

[ext_resource type="Script" path="res://scenes/enemies/bug.gd" id="1_5a32j"]
[ext_resource type="Texture2D" uid="uid://bqtchhful2svp" path="res://graphics/enemies/bug/attack/00010.png" id="1_kd8ic"]
[ext_resource type="Shader" path="res://scenes/enemies/bug.gdshader" id="2_8afm1"]
[ext_resource type="Texture2D" uid="uid://bccaiwqq6iaas" path="res://graphics/enemies/bug/attack/00011.png" id="2_5358r"]
[ext_resource type="Texture2D" uid="uid://jrw43iyi2psf" path="res://graphics/enemies/bug/attack/00012.png" id="3_x1p2o"]
[ext_resource type="Texture2D" uid="uid://bh0vkqfm1ypoo" path="res://graphics/enemies/bug/attack/00013.png" id="4_4afwr"]
[ext_resource type="Texture2D" uid="uid://onwqlr24ypmf" path="res://graphics/enemies/bug/attack/00014.png" id="5_aa0ft"]
[ext_resource type="Texture2D" uid="uid://cst1i8utnqdnk" path="res://graphics/enemies/bug/attack/00015.png" id="6_1ca64"]
[ext_resource type="Texture2D" uid="uid://doioutj8cyh3m" path="res://graphics/enemies/bug/attack/00016.png" id="7_up1d0"]
[ext_resource type="Texture2D" uid="uid://diypj0y43faox" path="res://graphics/enemies/bug/attack/00017.png" id="8_6uj1k"]
[ext_resource type="Texture2D" uid="uid://b40yretn8sqcj" path="res://graphics/enemies/bug/attack/00018.png" id="9_h8ta6"]
[ext_resource type="Texture2D" uid="uid://ddwyjw04sf3tj" path="res://graphics/enemies/bug/attack/00019.png" id="10_1jgdg"]
[ext_resource type="Texture2D" uid="uid://c74u1c1jfbhc8" path="res://graphics/enemies/bug/attack/00020.png" id="11_7wso8"]
[ext_resource type="Texture2D" uid="uid://cwqbx6v01dn8l" path="res://graphics/enemies/bug/attack/00021.png" id="12_g8pv3"]
[ext_resource type="Texture2D" uid="uid://brtuyrh428jcf" path="res://graphics/enemies/bug/attack/00022.png" id="13_0pnvp"]
[ext_resource type="Texture2D" uid="uid://crs5aymmu4qnd" path="res://graphics/enemies/bug/attack/00023.png" id="14_ebbhs"]
[ext_resource type="Texture2D" uid="uid://421quavjcbd" path="res://graphics/enemies/bug/attack/00024.png" id="15_74j7t"]
[ext_resource type="Texture2D" uid="uid://bwrne1rhsbg0s" path="res://graphics/enemies/bug/attack/00025.png" id="16_hy5wv"]
[ext_resource type="Texture2D" uid="uid://d3qejgpd31rjk" path="res://graphics/enemies/bug/attack/00026.png" id="17_ysvsu"]
[ext_resource type="Texture2D" uid="uid://b8pubsrcqbg2l" path="res://graphics/enemies/bug/attack/00027.png" id="18_ktbbc"]
[ext_resource type="Texture2D" uid="uid://q0xpjm13l1xc" path="res://graphics/enemies/bug/attack/00028.png" id="19_8dept"]
[ext_resource type="Texture2D" uid="uid://cw2btdab0v0k8" path="res://graphics/enemies/bug/attack/00029.png" id="20_1ilk2"]
[ext_resource type="Texture2D" uid="uid://bg1g6i7gqchr7" path="res://graphics/enemies/bug/attack/00030.png" id="21_8byp0"]
[ext_resource type="Texture2D" uid="uid://c2difblpwh1yb" path="res://graphics/enemies/bug/walk/00000.png" id="22_5d4lf"]
[ext_resource type="Texture2D" uid="uid://bfvd4v2s6kvke" path="res://graphics/enemies/bug/walk/00001.png" id="23_00drb"]
[ext_resource type="Texture2D" uid="uid://g4bfsvgvsubg" path="res://graphics/enemies/bug/walk/00002.png" id="24_d61tr"]
[ext_resource type="Texture2D" uid="uid://clkh6sm8aep4n" path="res://graphics/enemies/bug/walk/00003.png" id="25_j6i4r"]
[ext_resource type="Texture2D" uid="uid://c165xm802husm" path="res://graphics/enemies/bug/walk/00004.png" id="26_a1n8g"]
[ext_resource type="Texture2D" uid="uid://iy106p7sgse" path="res://graphics/enemies/bug/walk/00005.png" id="27_cvvp7"]
[ext_resource type="Texture2D" uid="uid://bnp4uyxbvqs4l" path="res://graphics/enemies/bug/walk/00006.png" id="28_0yeqd"]
[ext_resource type="Texture2D" uid="uid://ws5fjwgbrn76" path="res://graphics/enemies/bug/walk/00007.png" id="29_l1vai"]
[ext_resource type="Texture2D" uid="uid://bcy61de5p6r8p" path="res://graphics/enemies/bug/walk/00008.png" id="30_ptklr"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2122y"]
shader = ExtResource("2_8afm1")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/progress = 0.0

[sub_resource type="SpriteFrames" id="SpriteFrames_kha73"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_kd8ic")
}, {
"duration": 1.0,
"texture": ExtResource("2_5358r")
}, {
"duration": 1.0,
"texture": ExtResource("3_x1p2o")
}, {
"duration": 1.0,
"texture": ExtResource("4_4afwr")
}, {
"duration": 1.0,
"texture": ExtResource("5_aa0ft")
}, {
"duration": 1.0,
"texture": ExtResource("6_1ca64")
}, {
"duration": 1.0,
"texture": ExtResource("7_up1d0")
}, {
"duration": 1.0,
"texture": ExtResource("8_6uj1k")
}, {
"duration": 1.0,
"texture": ExtResource("9_h8ta6")
}, {
"duration": 1.0,
"texture": ExtResource("10_1jgdg")
}, {
"duration": 1.0,
"texture": ExtResource("11_7wso8")
}, {
"duration": 1.0,
"texture": ExtResource("12_g8pv3")
}, {
"duration": 1.0,
"texture": ExtResource("13_0pnvp")
}, {
"duration": 1.0,
"texture": ExtResource("14_ebbhs")
}, {
"duration": 1.0,
"texture": ExtResource("15_74j7t")
}, {
"duration": 1.0,
"texture": ExtResource("16_hy5wv")
}, {
"duration": 1.0,
"texture": ExtResource("17_ysvsu")
}, {
"duration": 1.0,
"texture": ExtResource("18_ktbbc")
}, {
"duration": 1.0,
"texture": ExtResource("19_8dept")
}, {
"duration": 1.0,
"texture": ExtResource("20_1ilk2")
}, {
"duration": 1.0,
"texture": ExtResource("21_8byp0")
}],
"loop": true,
"name": &"attack",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("22_5d4lf")
}, {
"duration": 1.0,
"texture": ExtResource("23_00drb")
}, {
"duration": 1.0,
"texture": ExtResource("24_d61tr")
}, {
"duration": 1.0,
"texture": ExtResource("25_j6i4r")
}, {
"duration": 1.0,
"texture": ExtResource("26_a1n8g")
}, {
"duration": 1.0,
"texture": ExtResource("27_cvvp7")
}, {
"duration": 1.0,
"texture": ExtResource("28_0yeqd")
}, {
"duration": 1.0,
"texture": ExtResource("29_l1vai")
}, {
"duration": 1.0,
"texture": ExtResource("30_ptklr")
}],
"loop": true,
"name": &"walk",
"speed": 24.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ko4n5"]
radius = 147.031

[sub_resource type="CircleShape2D" id="CircleShape2D_3ytbv"]
radius = 1538.33

[sub_resource type="CircleShape2D" id="CircleShape2D_606ax"]
radius = 106.231

[node name="Bug" type="CharacterBody2D" groups=["Entity"]]
script = ExtResource("1_5a32j")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_2122y")
position = Vector2(3, -102)
scale = Vector2(0.25, 0.25)
sprite_frames = SubResource("SpriteFrames_kha73")
animation = &"walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ko4n5")

[node name="Areas" type="Node2D" parent="."]

[node name="NoticeArea2D" type="Area2D" parent="Areas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/NoticeArea2D"]
shape = SubResource("CircleShape2D_3ytbv")

[node name="AttackArea2D" type="Area2D" parent="Areas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/AttackArea2D"]
position = Vector2(0, -292)
shape = SubResource("CircleShape2D_606ax")

[node name="VulnerabilityTimer" type="Timer" parent="."]

[connection signal="body_entered" from="Areas/NoticeArea2D" to="." method="_on_notice_area_2d_body_entered"]
[connection signal="body_exited" from="Areas/NoticeArea2D" to="." method="_on_notice_area_2d_body_exited"]
[connection signal="body_entered" from="Areas/AttackArea2D" to="." method="_on_attack_area_2d_body_entered"]
[connection signal="body_exited" from="Areas/AttackArea2D" to="." method="_on_attack_area_2d_body_exited"]
[connection signal="timeout" from="VulnerabilityTimer" to="." method="_on_vulnerability_timer_timeout"]
